--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<button onclick="window.location.href='giochi/dadi_ghiselli.html'">Clicca per giocare a dadi</button>
 </body>
 </html>
