--- a/giochi/dadi_ghiselli.html
+++ b/giochi/dadi_ghiselli.html
@@ -36,7 +36,7 @@
                 alert("Pareggio con "+p_G1+" punti!")
             }
             var Continue=confirm("Vuoi fare una nuova partita? ")
-        }while(Continue=true)
+        }while(Continue==true)
 	  </script>
   </body>
 </html>
