--- a/index.html
+++ b/index.html
@@ -1,8 +1,46 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <title>Border Radius</title>
+		<style type="text/css">
+            body{
+                background-color:lightgray
+            }
+            button{
+                width:300px;
+                height:300px;
+                font-size:22px;
+            }
+			h1 {
+				border: 5px solid black;
+				padding: 40px;
+				width: 50%;
+				border-radius: 10px ;
+                text-align: center;
+                margin: auto auto 10px auto ;
+                background-color: lightskyblue;
+				}
+            p {
+                margin: 20px auto 10px auto;
+            }
+            .line1 {
+				color:red}
+            .line2 {
+				color:green}
+            .line3{
+                color:blue
+            }
+		</style>
+
+<h1>Sito del gaisol</h1>
 <button onclick="window.location.href='giochi/dadi_ghiselli.html'">Clicca per giocare a dadi</button>
+
+
+
+
+
+
+
+<p>grazie github</p>
 </body>
 </html>
