inserimento bottone home all'interno del gioco

--- a/giochi/dadi_ghiselli.html
+++ b/giochi/dadi_ghiselli.html
@@ -1,5 +1,6 @@
 <html>
   <body>
+
 	 <script>
         do{
             var a=undefined;
@@ -38,5 +39,6 @@
             var Continue=confirm("Vuoi fare una nuova partita? ")
         }while(Continue==true)
 	  </script>
+      <button onclick="window.location.href='../index.html'">Clicca per tornare alla home</button>
   </body>
 </html>
