--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <h1>Sito del gaisol</h1>
 <button onclick="window.location.href='giochi/dadi_ghiselli.html'">Clicca per giocare a dadi</button>
-
+<button onclick="window.location.href='iscrizione.html'">Clicca per iscriverti al mio sito!</button>
 
 
 
