--- a/iscrizione.html
+++ b/iscrizione.html
@@ -8,7 +8,7 @@
  <body>
 
  <fieldset style="width: 350px;">
-  <legend>Complimentz, you can now buy the new Jordan 1 Union 2025</legend>
+  <legend>Complimentz, you can buy the new Jordan 1 Union 2025</legend>
   <label >Nome*: </label><br />
   <input id="nome" type="text" value="" > <br /><br />
   <label >Cognome*: </label><br />
@@ -20,11 +20,11 @@
   <input type="radio"  name="sesso" value="f"  /> F<br /><br />
   <button onclick=iscrizione()>Iscrizione</button>
  
-  
   <p id="testo" >iscriviti per ottenere GRATIS le scarpe Jordan 1 Union 2025</p>
-  <img type="image" src=/Users/alessandroghiselli/Desktop/Unknown.jpeg alt="Jordan 1 Union 2025" >
+  <img id= "immagine" type="image" src=images/Unknown.jpeg alt="Jordan 1 Union 2025" >
 
   </fieldset>
+  <img id= "immagine" type="image" src=images/Unknown-4.jpeg alt="Jordan 1 Union 2025" >
    <script>
     
     var testo = document.getElementById("testo")
@@ -43,9 +43,9 @@
       testo.style.backgroundColor ="red"
     }
     else if (sesso[0].checked){
-      testo.innerHTML="Complimenti per aver donato 1000 miliardi di eur a nominativo: Ghiselli Alessandro, le scarpe AIR ZOOM VICTORY 2 verranno spedite a breve"
+      testo.innerHTML="Complimenti per aver donato 1000 miliardi di eur a nominativo: Ghiselli Alessandro, le scarpe ADIZERO EVO SL verranno spedite a breve"
       testo.style.backgroundColor ="green"
-
+      immagine.src="images/Unknown-3.jpeg"
     }
     else if (sesso[1].checked){
       testo.innerHTML="Peccato hai perso"
